--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lambda-bootstrap",
+  "name": "lambda-contact-form-node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
