--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "aws-sdk": "^2.23.0",
     "babel-cli": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.1.8",
     "babel-register": "^6.23.0",
     "fast-async": "^6.2.1",
@@ -22,6 +22,7 @@
     "sinon": "^1.17.7"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "handlebars": "^4.0.6"
   }
 }
