--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./scripts/build.sh"
+    "test": "NODE_ENV=test mocha --opts tests/mocha.opts",
+    "build": "./scripts/build.sh",
+    "deploy": "./scripts/deploy.sh",
+    "docker": "docker run -e NODE_ENV=dev -t -i -v `pwd`:/app -w /app node:4.3 /bin/bash"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +19,7 @@
     "babel-preset-env": "^1.1.8",
     "babel-register": "^6.23.0",
     "fast-async": "^6.2.1",
+    "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "should": "^11.2.0",
     "sinon": "^1.17.7"
